turtleart.circleten.CircleTen.scala.error
Compilation error:
CircleTen:2: error: not found: value cerlce
  cerlce(100)
  ^