turtleart.circleten.CircleTen.scala.code
override def run() {
  cerlce(100)
}